@@ -1,5 +1,6 @@
 package io.oci.resource;
 
+import com.fasterxml.jackson.jr.ob.JSON;
 import io.oci.dto.ErrorResponse;
 import io.oci.model.Manifest;
 import io.oci.model.Repository;
@@ -8,7 +9,9 @@ import jakarta.inject.Inject;
 import jakarta.transaction.Transactional;
 import jakarta.ws.rs.*;
 import jakarta.ws.rs.core.*;
+import java.io.IOException;
 import java.util.List;
+import java.util.Map;
 
 @Path("/v2/{name}/manifests")
 public class ManifestResource {
@@ -16,18 +19,17 @@ public class ManifestResource {
     @Inject
     DigestService digestService;
 
-    @GET
+    @HEAD
     @Path("/{reference}")
-    public Response getManifest(@PathParam("name") String repositoryName,
-                              @PathParam("reference") String reference) {
-
+    public Response headManifest(@PathParam("name") String repositoryName,
+                                 @PathParam("reference") String reference) {
         Repository repo = Repository.findByName(repositoryName);
         if (repo == null) {
             return Response.status(404)
-                .entity(new ErrorResponse(List.of(
-                    new ErrorResponse.Error("NAME_UNKNOWN", "repository name not known to registry", repositoryName)
-                )))
-                .build();
+                    .entity(new ErrorResponse(List.of(
+                            new ErrorResponse.Error("NAME_UNKNOWN", "repository name not known to registry", repositoryName)
+                    )))
+                    .build();
         }
 
         Manifest manifest;
@@ -39,32 +41,69 @@ public class ManifestResource {
 
         if (manifest == null) {
             return Response.status(404)
-                .entity(new ErrorResponse(List.of(
-                    new ErrorResponse.Error("MANIFEST_UNKNOWN", "manifest unknown", reference)
-                )))
+                    .entity(new ErrorResponse(List.of(
+                            new ErrorResponse.Error("MANIFEST_UNKNOWN", "manifest unknown", reference)
+                    )))
+                    .build();
+        }
+
+        return Response.ok()
+                .header("Content-Type", manifest.mediaType)
+                .header("Docker-Content-Digest", manifest.digest)
+                .header("Content-Length", manifest.contentLength)
                 .build();
+    }
+
+
+    @GET
+    @Path("/{reference}")
+    public Response getManifest(@PathParam("name") String repositoryName,
+                                @PathParam("reference") String reference) {
+
+        Repository repo = Repository.findByName(repositoryName);
+        if (repo == null) {
+            return Response.status(404)
+                    .entity(new ErrorResponse(List.of(
+                            new ErrorResponse.Error("NAME_UNKNOWN", "repository name not known to registry", repositoryName)
+                    )))
+                    .build();
+        }
+
+        Manifest manifest;
+        if (reference.startsWith("sha256:")) {
+            manifest = Manifest.findByRepositoryAndDigest(repositoryName, reference);
+        } else {
+            manifest = Manifest.findByRepositoryAndTag(repositoryName, reference);
+        }
+
+        if (manifest == null) {
+            return Response.status(404)
+                    .entity(new ErrorResponse(List.of(
+                            new ErrorResponse.Error("MANIFEST_UNKNOWN", "manifest unknown", reference)
+                    )))
+                    .build();
         }
 
         return Response.ok(manifest.content)
-            .header("Content-Type", manifest.mediaType)
-            .header("Docker-Content-Digest", manifest.digest)
-            .header("Content-Length", manifest.contentLength)
-            .build();
+                .header("Content-Type", manifest.mediaType)
+                .header("Docker-Content-Digest", manifest.digest)
+                .header("Content-Length", manifest.contentLength)
+                .build();
     }
 
     @PUT
     @Path("/{reference}")
     public Response putManifest(@PathParam("name") String repositoryName,
-                              @PathParam("reference") String reference,
-                              @HeaderParam("Content-Type") String contentType,
-                              String manifestContent) {
+                                @PathParam("reference") String reference,
+                                @HeaderParam("Content-Type") String contentType,
+                                String manifestContent) {
 
-        if (manifestContent == null || manifestContent.trim().isEmpty()) {
+        if (manifestContent == null || manifestContent.isBlank()) {
             return Response.status(400)
-                .entity(new ErrorResponse(List.of(
-                    new ErrorResponse.Error("MANIFEST_INVALID", "manifest invalid", "empty manifest")
-                )))
-                .build();
+                    .entity(new ErrorResponse(List.of(
+                            new ErrorResponse.Error("MANIFEST_INVALID", "manifest invalid", "empty manifest")
+                    )))
+                    .build();
         }
 
         Repository repo = Repository.findByName(repositoryName);
@@ -72,8 +111,17 @@ public class ManifestResource {
             repo = new Repository(repositoryName);
             repo.persist();
         }
-
-        String digest = digestService.calculateDigest(manifestContent);
+        String digest = null;
+        try {
+            Map<String, Object> manifestMap = JSON.std.mapFrom(manifestContent);
+            digest = manifestMap.get("digest").toString();
+        } catch (Exception e) {
+        }
+        if (digest == null) {
+            // just as a fallback, calculate digest from content
+            // TODO I know this is wrong but we just do it for now.
+            digest = digestService.calculateDigest(manifestContent);
+        }
 
         // Check if manifest already exists
         Manifest existingManifest = Manifest.findByRepositoryAndDigest(repositoryName, digest);
@@ -84,9 +132,9 @@ public class ManifestResource {
                 existingManifest.update();
             }
             return Response.status(201)
-                .header("Location", "/v2/" + repositoryName + "/manifests/" + digest)
-                .header("Docker-Content-Digest", digest)
-                .build();
+                    .header("Location", "/v2/" + repositoryName + "/manifests/" + digest)
+                    .header("Docker-Content-Digest", digest)
+                    .build();
         }
 
         Manifest manifest = new Manifest();
@@ -108,24 +156,24 @@ public class ManifestResource {
         repo.update();
 
         return Response.status(201)
-            .header("Location", "/v2/" + repositoryName + "/manifests/" + digest)
-            .header("Docker-Content-Digest", digest)
-            .build();
+                .header("Location", "/v2/" + repositoryName + "/manifests/" + digest)
+                .header("Docker-Content-Digest", digest)
+                .build();
     }
 
     @DELETE
     @Path("/{reference}")
 
     public Response deleteManifest(@PathParam("name") String repositoryName,
-                                 @PathParam("reference") String reference) {
+                                   @PathParam("reference") String reference) {
 
         Repository repo = Repository.findByName(repositoryName);
         if (repo == null) {
             return Response.status(404)
-                .entity(new ErrorResponse(List.of(
-                    new ErrorResponse.Error("NAME_UNKNOWN", "repository name not known to registry", repositoryName)
-                )))
-                .build();
+                    .entity(new ErrorResponse(List.of(
+                            new ErrorResponse.Error("NAME_UNKNOWN", "repository name not known to registry", repositoryName)
+                    )))
+                    .build();
         }
 
         Manifest manifest;
@@ -137,10 +185,10 @@ public class ManifestResource {
 
         if (manifest == null) {
             return Response.status(404)
-                .entity(new ErrorResponse(List.of(
-                    new ErrorResponse.Error("MANIFEST_UNKNOWN", "manifest unknown", reference)
-                )))
-                .build();
+                    .entity(new ErrorResponse(List.of(
+                            new ErrorResponse.Error("MANIFEST_UNKNOWN", "manifest unknown", reference)
+                    )))
+                    .build();
         }
 
         manifest.delete();
